frontend/src/index.css
body,html {
  height: 100vh;
  width: 100vw;
}
* {
  box-sizing: border-box;
}

body {
  background-image: url("./images/audioHazeBackgroundFinal.png");
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-color: black;
  font-family: 'Montserrat', sans-serif;
  /* padding: 100px 0 0; */
  overflow-x: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 0px;
}


html {
  /* background-image: url("./images/audioHazeBackgroundblock.png"); */
  background-size: auto;
  background-position: center;
  background-repeat: no-repeat;
  background-color: black;
  font-family: 'Montserrat', sans-serif;
  /* padding: 100px 0 0; */
  overflow: hidden;
  width: 100vw;
  height: 100vh;
}

#root {
  margin: 0;
  padding: none;
  width: 100%;
}

@font-face {
  font-family: DS-DIGIB;
  src: url("../public/fonts/DS-DIGIB.TTF");
}

.truncate {
  width: 250px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

::-webkit-scrollbar {
  background: rgba(62, 62, 62, 0.1);
  border-radius: 20px;
  height: 10px !important;
  width: 10px !important;
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 0, 98, 0.705);
  border-radius: 20px;
  /* -webkit-box-shadow: inset 0 0 5px rgb(93, 166, 255); */
}

